--- a/style.css
+++ b/style.css
@@ -24,15 +24,13 @@ body {
 
 
 
-
-
-
 .comida {
     display: block;
     position: absolute;
     right: 30%;
     width: 200px;
     height: 200px;
+    
 
     
 }
@@ -58,8 +56,8 @@ body {
     font-weight: 600;
     font-size: 3rem;
     color: black;
-
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
+    padding-left: 21%;
 }
 
 .Paragrafo {
@@ -69,17 +67,19 @@ body {
     color: black;
     width: 48%;
     margin-bottom: 3rem;
+    margin-inline: 7.7rem;
 }
 
 .cardapio{
 
     width: 200px;
-    height: 50px;
+    height: 45px;
     background-color: red;
-    border-radius: 4px;
+    border-radius: 10px;
     font-size: 1rem;
-    font-weight: 100;
     color: white;
+    margin-inline: 7.7rem;
+    
 }
 
 ul {
@@ -94,16 +94,18 @@ ul {
     width: 320px;
     height: 300px;
     position: absolute;
-    top: 400px;
-    right: 818px;
+    margin-inline: 15.5rem;
+
+
+    
+
 
 }
    
 .Texto2{
 
     width: 40%;
-    padding-top: 10%;
-    margin-inline: 35rem;
+    margin-inline: 43rem;
 }
 
 .Paragrafo2 {
@@ -112,14 +114,20 @@ ul {
     font-weight: 400;
     font-size: 1rem;
     color: black;
-    width: 70%;
-    margin-bottom: 2.5rem;
-
+    width: 48%;
+    margin-bottom: 3rem;
 
 }
 
 .T2 {
-    margin-inline: 30rem; 
+
+    height: 60px;
+    font-family: Montserrat;
+    font-weight: 600;
+    font-size: 3rem;
+    color: black;
+
+    margin-bottom: 5rem;
     
 }
 
@@ -144,8 +152,8 @@ ul {
 
     font-family: Montserrat;
     width: 40%;
-    padding-top: 10%;
-    margin-inline: 35rem;
+    padding-top: 8%;
+    margin-inline: 15.8rem;
     font-weight: 600;
     margin-bottom: 1.5rem;
     font-size: 2rem;
@@ -153,6 +161,125 @@ ul {
 
 
 }
+
+.foto1{
+
+    width: 250px;
+    height: 400px;
+    padding-right: 2%;
+    padding-left: 20%;
+
+}
+
+.foto2{
+
+    width: 250px;
+    height: 400px;
+    padding-right: 2%;
+
+}
+
+.foto3{
+
+    width: 250px;
+    height: 400px;
+
+
+
+}
+
+.fundo1{
+    width: 400px;
+    height: 280px;
+    padding-left: 20.0%;
+
+    
+}
+
+.fundo2{
+    width: 400px;
+    height: 280px;
+    padding-left: 1%;
+}
+
+.loc{
+
+    font-family: Montserrat;
+    width: 40%;
+    padding-top: 8%;
+    margin-inline: 15.8rem;
+    font-weight: 600;
+    margin-bottom: 1.5rem;
+    font-size: 2rem;
+    color: black;
+
+}
+
+.loc1{
+
+    Width: 800px;
+    Height: 390px;
+    padding-right: 10%;
+    border-radius: 16px 0px 0px 0px;
+    padding-left: 20%;
+
+
+}
+
+.buscar{
+    width: 120px;
+    color: rgb(255, 0, 0);
+    background-color: red;
+    border-radius: 10%;
+    padding-right: 2%;
+    margin-inline-start: 0%;
+
+}
+
+.buscar1{
+    padding-left: 48%;
+    padding-top: 1%;
+}
+
+FoodJP1 {
+ 
+    height: 20px; 
+    width: 100px; 
+    padding-left: 230px; 
+    padding-top: 8%;
+  }
+     
+    .listape {
+     
+    justify-content: center; 
+    height: 30px;
+     
+    }
+     
+    .listape1 {
+     
+    justify-content: center; 
+    height: 30px;
+     
+    }
+     
+    .listape2 {
+     
+    justify-content: center; 
+    height: 30px;
+     
+    }
+     
+    .listape3{
+     
+    justify-content: center;
+     
+    }
+
+    
+
+
+
 
 
 
