site comida oriental 100% pronto

--- a/style.css
+++ b/style.css
@@ -6,6 +6,17 @@ body {
     background-color: #FFFFFF;
 }
 
+button {
+     
+    width: 140px;    
+    height: 40px;    
+    background-color: transparent;    
+    border: 2px solid black;
+    border-radius: 10px;
+    cursor: pointer;
+    
+}
+
 .foto{
     display: inline-flex;
     height: 29px;
@@ -20,6 +31,7 @@ body {
     font-family: Inter, sans-serif;
     color: black;
 }
+
 
 
 
